--- a/src/components/ui/Footer/Footer.module.sass
+++ b/src/components/ui/Footer/Footer.module.sass
@@ -38,12 +38,12 @@
     width: 200px
     height: 80px
     font-size: 30px
+    font-family: var(--font-chelaOne)
     text-decoration: none
     color: #fff
     background: #fa0
     border-radius: 20px 20px 0 0
     font-weight: 500
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
     display: flex
     align-items: center
     justify-content: center
