--- a/src/components/ui/Logo/Logo.module.sass
+++ b/src/components/ui/Logo/Logo.module.sass
@@ -4,7 +4,7 @@
   text-decoration: none
   color: #fff
   font-weight: 500
-  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+  font-family: var(--font-chelaOne)
   background: #fa0
   border-radius: 0 0 20px 20px
   display: flex
